# Structures

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  reference.md  usage.md
src/structures/: __init__.py  __main__.py  cli.py  example.py  structural_entity.py
src/structures/FEM/: mesh.py  plate_element.py  solver.py
src/structures/composites/: Panel.py  data_utils.py  laminate.py  math_utils.py  sandwich.py  utils.py
src/structures/composites/base_components/: core.py  lamina.py
src/structures/composites/data/: core_props.py  lamina_props.py
src/structures/panel/: Panel.py  data_utils.py  laminate.py  sandwich.py  utils.py
src/structures/panel/base_components/: core.py  lamina.py
src/structures/panel/data/: core_props.py  lamina_props.py  material_properties.py
tests/: test_example.py  test_solver.py  test_solver_integration.py
tests/test_panel/: test_laminate.py  test_sandwich.py  test_utils.py
