[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "structures"
dynamic = ["version"]
description = "Finite Element Analysis library for structural engineering"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["structures"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "D100"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:D"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/your-org/structures"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
structures = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "PL"]
ignore = ["E501", "PLR0913", "PLR0915", "UP007"]  # Let black handle line length, disable too many args/statements, disable union syntax modernization

[tool.ruff.lint.isort]
known-first-party = ["structures"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
filterwarnings = [
  "error::DeprecationWarning",
]
testpaths = [
  "tests",
]

[tool.coverage.run]
branch = true
source = ["structures"]

[tool.coverage.report]
show_missing = true
skip_covered = true
